# SIkS

./: .gitignore  .gitmodules  LICENSE  README.md
SIkS/: MultiAgentEnv.py  SIkS.py  ScenarioData.py  ScenarioDataset.py  ScenarioSimulator.py  SimulatorTest.py
SIkS/Environment/: ScenarioSimulator.py  SimulatorTest.py
SIkS/Environment/Lib/: ScenarioData.py  ScenarioDataset.py  __init__.py
SIkS/Lib/: ScenarioData.py  ScenarioDataset.py
SIkS_cpp/: CMakeLists.txt  SimulatorServerWrapper.py  ipc.cpp  ipc_test.py  main.cpp
SIkS_cpp/lib/: Dataset.h  DatasetAPI.cpp  DatasetAPI.h  ScenarioSimulator.cpp  ScenarioSimulator.h  Server.cpp  Server.h
